Fixed dockerfile and added readme

--- a/ros2/delsys_messages/CMakeLists.txt
+++ b/ros2/delsys_messages/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(std_msgs REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/DelsysIMU.msg"
+  "msg/DelsysEMG.msg"
   DEPENDENCIES builtin_interfaces geometry_msgs std_msgs
  )
 
